--- a/SearchEngine/templates/SearchEngine/SearchPage.html
+++ b/SearchEngine/templates/SearchEngine/SearchPage.html
@@ -1,30 +1,67 @@
 <!DOCTYPE html>
-<html lang="en">
+{% load staticfiles %}
+<html lang="cn">
 <head>
     <meta charset="UTF-8">
     <title>SearchPage</title>
+    <link rel="stylesheet" href="{% static 'text/css/search.css' %}" type="text/css">
+
+    <!-- Favicons -->
+    <link rel="icon" sizes="192x192" href="https://static.djangoproject.com/img/icon-touch.e4872c4da341.png">
+    <link rel="stylesheet" href="https://static.djangoproject.com/css/output.beb34528fd55.css" >
+    <script>
+    WebFont.load({
+      custom: {
+        families: ['FontAwesome', 'Fira+Mono'],
+      },
+      google: {
+        families: ['Roboto:400italic,700italic,300,700,400:latin'
+        ]
+      },
+      classes: false,
+      events: false,
+      timeout: 1000
+    });
+    </script>
+
 </head>
 <body>
-    <h1 style="...">用户输入</h1>
+    <div>
+        <h2>用户输入</h2>
+    </div>
 
     <form action="{% url 'SearchPage' %}" method="post">
         <p>搜索文本</p>
-        <textarea rows="10" cols="100" name="str_context">
+        <textarea rows="10" cols="100" name="str_context" autofocus>
 
         </textarea>
 
-        <p>关键字</p>
-        <input type="text" name="key_char"/>
-        <br>
-        <input type="submit" name="提交"/>
+
+        <label class="visuallyhidden" for="news-search">Search:</label>
+        <input type="search" name="key_char" id="id_q" placeholder="关键字">
+        <button type="submit" name="提交">
+        <i class="icon icon-search"></i>
+        <span class="visuallyhidden">Search</span>
+        </button>
+
     </form>
 
-    <p>=======================================</p>
-    <h1>匹配结果</h1>
+    <p>==========================================================================</p>
+    <h2>匹配结果</h2>
     {% autoescape off%}
         {% for result in search_results %}
             <p>{{ result }}</p>
         {% endfor %}
     {% endautoescape %}
+
+
+    {% if messages %}
+        <script>
+            {% for msg in messages %}
+                alert('{{ msg.message }}');
+            {% endfor %}
+        </script>
+    {% endif %}
+
 </body>
 </html>
